--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -15,7 +15,9 @@
                     <a class="nav-link active" aria-current="page" href="#">Books <i class="pi pi-book"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" routerLink="/author">Authors <i class="pi pi-user"></i></a>
+                    <a class="nav-link active" aria-current="page" routerLink="/author">Authors 
+                        <app-create-icon></app-create-icon>
+                    </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" routerLink="/category">Categories <i class="pi pi-database"></i></a>
