--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -9,8 +9,12 @@
         <i class="pi pi-fw pi-image"></i> image
     </div>
     <div>
-        <i class="pi pi-fw pi-image"></i> videos
+        <i class="pi pi-fw pi-image"></i> pages
     </div>
-    <div></div>
-    <div></div>
+    <div>
+        <i class="pi pi-fw pi-image"></i> article
+    </div>
+    <div>
+        <i class="pi pi-fw pi-image"></i> pages
+    </div>
 </div>
