--- a/src/app/layout/horizontal/horizontal.component.html
+++ b/src/app/layout/horizontal/horizontal.component.html
@@ -1,11 +1,13 @@
-<div class="row">
-    <app-navbar></app-navbar>
-</div>
-<div class="row">
-    <div class="column sidebar">
-        <app-sidebar></app-sidebar>
+<div class="app-container">
+    <div>
+        <app-navbar></app-navbar>
     </div>
-    <div class="column">
-        <router-outlet></router-outlet>
+    <div class="d-flex">
+        <div class="sidebar">
+            <app-sidebar></app-sidebar>
+        </div>
+        <div class="content">
+            <router-outlet></router-outlet>
+        </div>
     </div>
 </div>
