--- a/src/app/layout/horizontal/horizontal.component.scss
+++ b/src/app/layout/horizontal/horizontal.component.scss
@@ -1,4 +1,18 @@
-.sidebar{
-    width: 200px;
+.app-container {
+    display: flex;
     height: 100vh;
-}
+    flex-direction: column;
+  }
+  
+  .sidebar {
+    width: 250px; 
+    background-color: #f0f0f0;
+    overflow: auto;
+  }
+  
+  .content {
+    flex: 1; 
+    overflow : scroll; 
+    padding: 20px; 
+  }
+  
