--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,21 +1,26 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+<nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom border-secondary">
+    <div class="container-fluid" >
+
+        <div >
+            <img class="profilepic" src="{{imageURL}}" alt="">
+        </div>
+
+        <a class="navbar-brand" href="#">CMS</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
+                <li class="nav-item menu">
                     <a class="nav-link active" aria-current="page" routerLink="/">Home <i class="pi pi-home"></i></a>
 
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Books <i class="pi pi-book"></i></a>
+                <li class="nav-item menu">
+                    <a class="nav-link active menu" aria-current="page" href="#">Books <i class="pi pi-book menu"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" routerLink="/author">Authors 
+                    <a class="nav-link active" aria-current="page" routerLink="/addPost">Add post 
                         <app-create-icon></app-create-icon>
                     </a>
                 </li>
@@ -24,9 +29,6 @@
                 </li>
             </ul>
             <div class="d-flex align-items-center fs-3 me-3" >{{userName}}  </div>
-            <div >
-                <img class="profilepic" src="{{imageURL}}" alt="">
-            </div>
             <button class="btn text-danger mx-3" (click)="logout()" type="button">Logout <i class="pi pi-user-minus"></i></button>
         </div>
     </div>
