--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -1,5 +1,10 @@
-.profilepic{
+.profilepic {
     width: 100px;
     height: 100px;
     border-radius: 50%;
+    margin-right: 100px;
+}
+
+a:hover {
+    color: #7c3fee  !important;
 }
