--- a/src/app/page/post/post.component.html
+++ b/src/app/page/post/post.component.html
@@ -6,7 +6,7 @@
               </video>
         </div>
         <div class="image" *ngIf="post.type == 'image/jpeg' || post.type=='image/png'">
-            <img class="image rounded mx-auto img-fluid img-thumbnail" src="{{post.midea}}" alt="">
+            <img class="image rounded mx-auto" src="{{post.midea}}" alt="">
         </div>
         
         <div class="title fs-4 fw-5">
