--- a/src/app/page/post/post.component.scss
+++ b/src/app/page/post/post.component.scss
@@ -1,16 +1,16 @@
 .post{
     border-radius: 25px;
     margin: 10px;
-    background-color: #9684b9;
-    box-shadow:inset 0px 0px 20px 5px snow;;
+    background-color: #9987bd9c;
+    box-shadow:inset 0px 0px 20px 5px #909090;
 }
 
 .image{
-    width: 300px;
+    width: 100%;
     aspect-ratio: 1/1;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 5px;
+    margin-top: 0px;
 }
 
 .description , .title{
