--- a/src/app/layout/horizontal/horizontal.component.html
+++ b/src/app/layout/horizontal/horizontal.component.html
@@ -2,11 +2,11 @@
     <div>
         <app-navbar></app-navbar>
     </div>
-    <div class="d-flex">
+    <div class="d-flex page">
         <div class="sidebar">
             <app-sidebar></app-sidebar>
         </div>
-        <div class="content">
+        <div class="content container-fluid">
             <router-outlet></router-outlet>
         </div>
     </div>
