--- a/src/app/layout/horizontal/horizontal.component.scss
+++ b/src/app/layout/horizontal/horizontal.component.scss
@@ -7,12 +7,17 @@
   .sidebar {
     width: 250px; 
     background-color: #f0f0f0;
+    position: fixed;
+    z-index: 10;
     overflow: auto;
   }
   
   .content {
     flex: 1; 
-    overflow : scroll; 
     padding: 20px; 
+    padding-left: 250px;
   }
   
+  .page{
+    margin-top: 116px;
+  }
