--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -8,3 +8,11 @@
 a:hover {
     color: #7c3fee  !important;
 }
+
+.Navbar{
+  position: fixed;
+  top: 0px;
+  z-index: 2;
+  width: 100%;
+  margin-bottom: 200px;
+}
