--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,28 +1,20 @@
-<div class="flex justify-content-center py-5 ps-3 border border-top-0 border-secondary full-height" >
+<div class="flex justify-content-center py-5 ps-3 border border-top-0 border-secondary full-height w-100" >
     <div class="d-flex align-items-center m-2 menu">
-        <i class="pi pi-fw pi-user"></i> Profile 
+        <a class="nav-link active menu" aria-current="page" routerLink="/page/profile"><i class="pi pi-fw pi-user menu"></i> Profile</a>   
     </div>
     <div class="d-flex align-items-center m-2 menu">
-        <i class="pi pi-fw pi-video"></i> Videos
+        <a class="nav-link active menu" aria-current="page" routerLink="/page/videos"><i class="pi pi-fw pi-video"></i> Videos</a>
     </div>
     <div class="d-flex align-items-center m-2 menu">
-        <i class="pi pi-fw pi-users"></i> Users
+        <a class="nav-link active menu" aria-current="page" routerLink="/page/users"> <i class="pi pi-fw pi-users"></i> Users</a>
     </div>
     <div class="d-flex align-items-center m-2 menu">
-        <i class="pi pi-fw pi-image"></i> Image
+        <a class="nav-link active menu" aria-current="page" routerLink="/page/images"><i class="pi pi-fw pi-image"></i> Image</a>
     </div>
     <div class="d-flex align-items-center m-2 menu">
-        <i><p-dropdown>
-            <ng-template pTemplate="dropdownicon">
-                <img style="height: 20px" class="image" alt="dropdown icon" src="../../../assets/page.png">
-            </ng-template>
-        </p-dropdown></i> Pages
+        <a class="nav-link active menu" aria-current="page" routerLink="/page/pages"><i class="pi pi-fw pi-save"></i> Pages</a>
     </div>
     <div class="d-flex align-items-center m-2 menu">
-        <i><p-dropdown>
-            <ng-template pTemplate="dropdownicon">
-                <img style="height: 20px" class="image" alt="dropdown icon" src="../../../assets/article.png">
-            </ng-template>
-        </p-dropdown></i> Article
+        <a class="nav-link active menu" aria-current="page" routerLink="/page/articles"><i class="pi pi-fw pi-align-justify"></i> Article</a>
     </div>
 </div>
