--- a/src/app/authentication/signup/signup.component.scss
+++ b/src/app/authentication/signup/signup.component.scss
@@ -17,7 +17,7 @@
   display: flex;
   flex-direction: column;
   gap: 14px;
-  padding: 24px;
+  padding: 20px;
 }
 
 
@@ -53,7 +53,7 @@ label {
 }
 
 /*Button*/
-.form button {
+.signup-btn {
   width: 85%;
   height: 40px;
   margin: 12px auto 10%;
@@ -67,6 +67,6 @@ label {
   transition: .2s ease-in;
 }
 
-.form button:hover {
+.signup-btn:hover {
   background-color: #6d44b8;
 }
