--- a/src/app/layout/horizontal/horizontal.component.html
+++ b/src/app/layout/horizontal/horizontal.component.html
@@ -1,12 +1,13 @@
 <div class="app-container">
     <div>
         <app-navbar></app-navbar>
+      
     </div>
     <div class="d-flex page">
         <div class="sidebar">
             <app-sidebar></app-sidebar>
         </div>
-        <div class="content container-fluid">
+        <div class="content container-fluid col-lg-12">
             <router-outlet></router-outlet>
         </div>
     </div>
