--- a/src/app/layout/sidebar/sidebar.component.scss
+++ b/src/app/layout/sidebar/sidebar.component.scss
@@ -1,10 +1,15 @@
 .menu:hover {
     color: #7c3fee  !important;
 }
+.menu{
+    list-style: none;
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
 
 .full-height{
     height: 100vh;
     position: -webkit-sticky;
     position: sticky;
-    top: 0;
+    top: 116px;
 }
