--- a/src/app/page/images/images.component.html
+++ b/src/app/page/images/images.component.html
@@ -1,1 +1,16 @@
-<p>images works!</p>
+<div class="d-flex flex-wrap  gap-3">
+    <div class="card post" style="width: 30%;" *ngFor="let post of posts">
+
+        <div class="image" *ngIf="post.type == 'image/jpeg' || post.type=='image/png'">
+            <img class="image" src="{{post.midea}}" alt="">
+        </div>
+        
+        <div class="title fs-4 fw-5">
+            {{post.title}}
+        </div>
+        <div class="description">
+            {{post.description}}
+        </div>
+    </div>
+
+</div>
