--- a/src/app/page/videos/videos.component.html
+++ b/src/app/page/videos/videos.component.html
@@ -1,8 +1,8 @@
 <div *ngFor="let post of posts">
     <div class="card post"   *ngIf="post.type == 'video/mp4'">
         <div class="image">
-            <video class="w-100 mt-3" controls>
-                <source class="image " src="{{post.midea}}" type="video/mp4">
+            <video class="video mt-3" controls>
+                <source src="{{post.midea}}" type="video/mp4">
               </video>
         </div>
     
