--- a/src/app/page/videos/videos.component.scss
+++ b/src/app/page/videos/videos.component.scss
@@ -1,15 +1,23 @@
 .post{
-    border-radius: 25px;
-    margin: 10px;
-    box-shadow:inset 0px 0px 20px 5px snow;;
+   
+    border-radius: 53px;
+    background: linear-gradient(145deg, #4e357c, #5d3f94);
+    box-shadow:  12px 12px 24px #4b3377,
+                 -12px -12px 24px #63439d;
+
 }
 
-.image{
+.video{
+    width: 80% !important;
+    aspect-ratio: 16/ 9;
     margin-left: auto;
     margin-right: auto;
     margin-top: 12px;
+    display: flex;
 }
 
 .description , .title{
     padding: 20px;
 }
+
+
