--- a/src/app/page/images/images.component.scss
+++ b/src/app/page/images/images.component.scss
@@ -1,18 +1,19 @@
-.post{
-    border-radius: 25px;
-    margin: 10px;
-    background-color: #9987bd9c;
-    box-shadow:inset 0px 0px 20px 5px #909090;
+.post {
+  border-radius: 25px;
+  margin: 10px;
+  background-color: #9987bd9c;
+  box-shadow: inset 0px 0px 20px 5px #909090;
 }
 
-.image{
-    width: 100%;
-    aspect-ratio: 1/1;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 12px;
+.image {
+  width: 100%;
+  aspect-ratio: 1/1;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 12px;
 }
 
-.description , .title{
-    padding: 20px;
+.description,
+.title {
+  padding: 20px;
 }
