--- a/src/app/page/my-content/my-content.component.html
+++ b/src/app/page/my-content/my-content.component.html
@@ -5,7 +5,8 @@
         <source class="image " src="{{post.midea}}" type="video/mp4">
       </video>
     </div>
-    <div class="image" *ngIf="post.type == 'image/jpeg' || post.type=='image/png'">
+    <div class="image"
+      *ngIf="post.mideaType == 'image/jpeg' || post.mideaType=='image/png' || post.mideaType == 'image/jpg' || post.type == 'image/jpeg' || post.type=='image/png' || post.type == 'image/jpg">
       <img class="image" src="{{post.midea}}" alt="">
     </div>
 
