--- a/src/app/page/post/post.component.html
+++ b/src/app/page/post/post.component.html
@@ -5,7 +5,8 @@
         <source class="video" src="{{post.midea}}" type="video/mp4">
       </video>
     </div>
-    <div *ngIf="post.type == 'image/jpeg' || post.type=='image/png'">
+    <div
+      *ngIf="post.type == 'post.mideaType == 'image/jpeg' || post.mideaType=='image/png' || post.mideaType == 'image/jpg' || post.type == 'image/jpeg' || post.type=='image/png' || post.type == 'image/jpg">
       <img class="image" src="{{post.midea}}" alt="">
     </div>
 
