fix string error in post and my content component

--- a/src/app/page/my-content/my-content.component.html
+++ b/src/app/page/my-content/my-content.component.html
@@ -6,7 +6,7 @@
       </video>
     </div>
     <div class="image"
-      *ngIf="post.mideaType == 'image/jpeg' || post.mideaType=='image/png' || post.mideaType == 'image/jpg' || post.type == 'image/jpeg' || post.type=='image/png' || post.type == 'image/jpg">
+      *ngIf="post.mideaType == 'image/jpeg' || post.mideaType=='image/png' || post.mideaType == 'image/jpg' || post.type == 'image/jpeg' || post.type=='image/png' || post.type == 'image/jpg'">
       <img class="image" src="{{post.midea}}" alt="">
     </div>
 
