--- a/src/app/page/post/post.component.scss
+++ b/src/app/page/post/post.component.scss
@@ -1,6 +1,6 @@
 .post {
   border-radius: 25px;
-  background: #9987bd9c;
+  background: #240046;
   box-shadow: 5px 5px 20px 3px #060606, -5px -5px 20px 3px #a392a1;
   margin: 10px;
   height: auto;
