--- a/src/app/layout/horizontal/horizontal.component.html
+++ b/src/app/layout/horizontal/horizontal.component.html
@@ -26,7 +26,7 @@
   <div class="coded-wrapper">
     <div class="coded-content">
       <div class="coded-inner-content">
-        <!-- <app-breadcrumbs></app-breadcrumbs> -->
+        <app-breadcrumbs></app-breadcrumbs>
         <div class="main-body">
           <div class="page-wrapper">
             <router-outlet></router-outlet>
