--- a/src/app/layout/horizontal/navigation/nav-content/nav-content.component.html
+++ b/src/app/layout/horizontal/navigation/nav-content/nav-content.component.html
@@ -19,14 +19,14 @@
       } -->
     </ul>
     <div class="pc-navbar-card bg-primary rounded">
-      <h4 class="text-white">Berry Pro</h4>
-      <p class="text-white">Checkout Berry Premium Features</p>
+      <h4 class="text-white">CMS Pro</h4>
+      <p class="text-white">Checkout our CMS Premium Features</p>
       <a
-        href="https://codedthemes.com/item/berry-angular-admin-dashboard-template/?utm_source=free_demo&utm_medium=codedthemes&utm_campaign=button_download_premium"
+        href="#"
         target="_blank"
         class="btn btn-light text-primary"
       >
-        Download Premium
+        comming Soon
       </a>
     </div>
     <div class="version">
