--- a/src/app/page/post/post.component.scss
+++ b/src/app/page/post/post.component.scss
@@ -1,6 +1,7 @@
 .post {
   border-radius: 25px;
   background: #240046;
+  color: #fff;
   box-shadow: 5px 5px 20px 3px #060606, -5px -5px 20px 3px #a392a1;
   margin: 10px;
   height: auto;
