--- a/src/app/layout/horizontal/navigation/nav-content/nav-item/nav-item.component.html
+++ b/src/app/layout/horizontal/navigation/nav-content/nav-item/nav-item.component.html
@@ -1,3 +1,4 @@
+<div *ngIf="item.role.includes(currentuser.role)">
 <li [ngClass]="item.classes!" *ngIf="item.url && !item.external" [routerLinkActive]="['active']">
   <a class="nav-link" [target]="item.target ? '_blank' : '_self'" [routerLink]="[item.url]" (click)="closeOtherMenu($event)">
     <span *ngIf="item.icon" class="coded-micon"><i [ngClass]="item.icon"></i></span>
@@ -16,3 +17,4 @@
     </ng-template>
   </a>
 </li>
+</div>
