--- a/src/app/page/my-content/my-content.component.scss
+++ b/src/app/page/my-content/my-content.component.scss
@@ -1,17 +1,21 @@
 .post {
   border-radius: 25px;
+  background: #240046;
+  color: #fff;
+  box-shadow: 5px 5px 20px 3px #060606, -5px -5px 20px 3px #a392a1;
   margin: 10px;
-  background-color: #9684b9;
-  box-shadow: inset 0px 0px 20px 5px snow;
+  height: auto;
+  overflow: hidden;
   ;
 }
 
 .image {
   width: 100%;
   aspect-ratio: 1/1;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 12px;
+}
+
+.video {
+  width: 100%;
 }
 
 .description,
@@ -19,11 +23,28 @@
   padding: 20px;
 }
 
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(30%, 1fr));
+  gap: 10px;
+}
+
+.description {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  transition: max-height 0.3s ease;
+}
+
+.read-more-link {
+  color: blue;
+  text-decoration: underline;
+  cursor: pointer;
+}
 
 .action-btn {
   border-radius: 10px;
   margin: 0px 0px 12px 12px;
   background: linear-gradient(145deg, #cacaca, #f0f0f0);
-  box-shadow: 12px 12px 24px #c1c1c1,
-    -12px -12px 24px #ffffff;
+  box-shadow: 0px 0px 20px 2px #c1c1c1
 }
