--- a/src/app/page/videos/videos.component.scss
+++ b/src/app/page/videos/videos.component.scss
@@ -1,12 +1,15 @@
 .post {
-  border-radius: 53px;
-  background: linear-gradient(145deg, #4e357c, #5d3f94);
-  box-shadow: 12px 12px 24px #4b3377,
-    -12px -12px 24px #63439d;
+  border-radius: 25px;
+  background: #240046;
+  color: #fff;
+  box-shadow: 5px 5px 20px 3px #060606, -5px -5px 20px 3px #a392a1;
+  margin: 10px;
+  height: auto;
+  overflow: hidden;
 }
 
 .video {
-  width: 80% !important;
+  width: 70% !important;
   aspect-ratio: 16/ 9;
   margin-left: auto;
   margin-right: auto;
@@ -17,4 +20,24 @@
 .description,
 .title {
   padding: 20px;
+}
+
+.description {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  transition: max-height 0.3s ease;
+}
+
+.read-more-link {
+  color: blue;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+
+@media screen and (max-width: 768px) {
+  .video{
+    width: 100% !important;
+  }
 }
