--- a/src/app/shared/not-found/not-found.component.scss
+++ b/src/app/shared/not-found/not-found.component.scss
@@ -44,7 +44,7 @@
 }
 
 .stars {
-  background: url(assets/overlay_stars.svg);
+  background: url(/assets/overlay_stars.svg);
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
